# mancala

./: .gitignore  CMakeLists.txt  main.cpp  minimax.cpp  test.py
endgames/: CMakeLists.txt  endgames.cpp  endgames.hpp  endgamesTable.cpp  endgamesTable.hpp  endgamesTreeTable.cpp  endgamesTreeTable.hpp  threadedEndgames.cpp  threadedEndgames.hpp
minimax/: CMakeLists.txt  minimax.cpp  minimax.hpp
utility/: CMakeLists.txt  position.cpp  position.hpp
